added background image

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body class="bg-light">
@@ -35,9 +36,12 @@
       <div class="overlay"></div>
       <main class="text-center">
         <h1 class="display-1">I am Lungile Simelane.</h1>
-        <span id="typed" class="lead">Front-end Developer</span>
+        <span id="typed" class="lead"
+          >Front-end Developer. Based in Pretoria, South Afica.</span
+        >
         <span class="typed-cursor" aria-hidden="true">|</span>
       </main>
     </div>
+    <sript src="script.js" />
   </body>
 </html>
