--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h3 class="float-md-start text-center">Portfolio</h3>
         <nav class="nav nav-masthead justify-content-center float-md-end">
           <a class="nav-link active" aria-current="page" href="#">Home</a>
-          <a class="nav-link" href=".about-me">About</a>
+          <a class="nav-link" href="#about-me">About</a>
           <a class="nav-link" href="#projects">Projects</a>
           <a class="nav-link" href="#contact">Contact</a>
         </nav>
@@ -35,15 +35,15 @@
       <main class="text-center">
         <h1 class="display-1">I am Lungile Simelane.</h1>
         <h3>Front-end Developer, based in South Afica.</h3>
-        <a href=".about-me" class="btn mt-5">Get to know me</a>
+        <a href="#about-me" class="btn mt-5">Get to know me</a>
       </main>
     </div>
 
     ///About-me section///
-    <section class="about-me bg-dark">
+    <section id="about-me" class="bg-dark">
       <div class="container">
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-md-4">
             <img
               src="images/lungile.jpg"
               alt="Lungile Simelane Portrait"
@@ -51,14 +51,20 @@
               width="300"
             />
           </div>
-          <div class="col-md-6">
+          <div class="col-md-8">
             <div class="content">
               <h1 class="text-white">About Me</h1>
-              <p class="text-white">
-                I am passionate about creating visually appealing and
-                user-friendly web applications. With a solid background in HTML,
-                CSS, and JavaScript, I strive to deliver high-quality projects
-                that meet clients' needs and exceed their expectations.
+              <p class="text-white mb-5">
+                Hello! I'm Lungile Simelane, a passionate front-end developer
+                based in Pretoria, South Africa. With a keen eye for design and
+                a strong foundation in coding, I specialize in creating visually
+                stunning and user-friendly web experiences. My expertise spans
+                HTML, CSS and JavaScript. I thrive on transforming complex
+                problems into intuitive and accessible solutions. Beyond coding,
+                I enjoy staying updated with the latest tech trends and
+                continuously honing my skills to deliver cutting-edge web
+                applications. Let's connect and bring your digital visions to
+                life!
               </p>
               <a href=".projects" class="btn">See my projects</a>
             </div>
