--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <main class="text-center">
         <h1 class="display-1">I am Lungile Simelane.</h1>
         <h3>Front-end Developer, based in South Afica.</h3>
-        <a href="#about-me" class="btn mt-5">Get to know me</a>
+        <a href="#about-me" class="btn btn-branding mt-5">Get to know me</a>
       </main>
     </div>
 
@@ -67,7 +67,7 @@
                 applications. Let's connect and bring your digital visions to
                 life!
               </p>
-              <a href=".projects" class="btn">See my projects</a>
+              <a href="#projects" class="btn btn-branding">See my projects</a>
             </div>
           </div>
         </div>
@@ -75,59 +75,72 @@
     </section>
 
     ///Projects section///
-    <section id="projects" class="gradient-background">
+    <section id="projects" class="gradient-background mt-4">
       <div class="container">
         <h1 class="text-center text-white">Projects</h1>
-        <div class="row">
+        <div class="row mt-5">
           <div class="col-md-4">
-            <div class="card" style="width: 18rem">
-              <img src="..." class="card-img-top" alt="..." />
+            <div class="card" style="width: 22rem">
+              <img src="images/landing.png" class="card-img-top" alt="..." />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Landing Page</h5>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
+                  This landing page project was built using the bare basics of
+                  HTML,CSS and Javascript.
                 </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a
+                  href="https://coffee-landing-page.netlify.app"
+                  class="btn btn-primary"
+                  >View Project</a
+                >
+                <a
+                  href="https://github.com/LungiMarcia/Landing_page"
+                  class="btn btn-primary"
+                  >View Code</a
+                >
               </div>
             </div>
           </div>
           <div class="col-md-4">
-            <div class="card" style="width: 18rem">
-              <img src="..." class="card-img-top" alt="..." />
+            <div class="card" style="width: 22rem">
+              <img src="images/weather.png" class="card-img-top" alt="..." />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Weather App</h5>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
+                  This Weather App project was built using HTML, CSS, Javascript
+                  and API intergration.
                 </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a
+                  href="https://weatherwebsite-project.netlify.app"
+                  class="btn btn-primary"
+                  >View Project</a
+                >
+                <a
+                  href="https://github.com/LungiMarcia/Weather-App"
+                  class="btn btn-primary"
+                  >View Code</a
+                >
               </div>
             </div>
           </div>
           <div class="col-md-4">
-            <div class="card" style="width: 18rem">
-              <img src="..." class="card-img-top" alt="..." />
+            <div class="card" style="width: 22rem">
+              <img src="images/portfolio.png" class="card-img-top" alt="..." />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Portfolio</h5>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
+                  This portfolio was built using HTML, CSS and bootstrap.
                 </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card" style="width: 18rem">
-              <img src="..." class="card-img-top" alt="..." />
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
-                </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a
+                  href="https://lungile-portfolio.netlify.app"
+                  class="btn btn-primary"
+                  >View Project</a
+                >
+                <a
+                  href="https://github.com/LungiMarcia/Portfolio"
+                  class="btn btn-primary"
+                  >View Code</a
+                >
               </div>
             </div>
           </div>
