added contact page and the footer

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://kit.fontawesome.com/7a55b96b36.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body class="bg-dark">
@@ -144,6 +148,39 @@
               </div>
             </div>
           </div>
+        </div>
+      </div>
+      <h4 class="text-center text-white mt-5">More projects coming soon...</h4>
+    </section>
+
+    ///Contact section///
+    <section id="contact">
+      <div class="contact">
+        <h1 class="text-center text-white">Let's Connect</h1>
+        <p class="text-center text-white">
+          Whether you have a project idea, want to collaborate, feel free to
+          reach out through the email below or connect via social media. Looking
+          forward to connecting with you!
+        </p>
+        <div class="social-links d-flex justify-content-center">
+          <a
+            href="https://github.com/LungiMarcia"
+            target="_blank"
+            aria-label="GitHub"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+          <a
+            href="https://linkedin.com/in/lungile-simelane-142972a5"
+            target="_blank"
+            aria-label="LinkedIn"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
+        </div>
+        <div class="email-link text-center mt-4">
+          <a href="mailto:lungile.simelane4@gmail.com"
+            ><i class="fa-regular fa-envelope"></i
+            >lungile.simelane4@gmail.com</a
+          >
         </div>
       </div>
     </section>
