--- a/index.html
+++ b/index.html
@@ -184,5 +184,11 @@
         </div>
       </div>
     </section>
+    <footer class="bg-grey">
+      <p class="text-center">
+        Developed by Lungile Simelane using Bootstrap, code available on GitHub
+        and hosted on Netlify
+      </p>
+    </footer>
   </body>
 </html>
