updated index.html and style.css

--- a/index.html
+++ b/index.html
@@ -94,11 +94,13 @@
                 </p>
                 <a
                   href="https://coffee-landing-page.netlify.app"
+                  target="_blank"
                   class="btn btn-primary"
                   >View Project</a
                 >
                 <a
                   href="https://github.com/LungiMarcia/Landing_page"
+                  target="_blank"
                   class="btn btn-primary"
                   >View Code</a
                 >
@@ -116,11 +118,13 @@
                 </p>
                 <a
                   href="https://weatherwebsite-project.netlify.app"
+                  tagert="_blank"
                   class="btn btn-primary"
                   >View Project</a
                 >
                 <a
                   href="https://github.com/LungiMarcia/Weather-App"
+                  target="_blank"
                   class="btn btn-primary"
                   >View Code</a
                 >
@@ -137,11 +141,13 @@
                 </p>
                 <a
                   href="https://lungile-portfolio.netlify.app"
+                  target="_blank"
                   class="btn btn-primary"
                   >View Project</a
                 >
                 <a
                   href="https://github.com/LungiMarcia/Portfolio"
+                  target="_blank"
                   class="btn btn-primary"
                   >View Code</a
                 >
@@ -158,7 +164,7 @@
       <div class="contact">
         <h1 class="text-center text-white">Let's Connect</h1>
         <p class="text-center text-white">
-          Whether you have a project idea, want to collaborate, feel free to
+          Whether you have a project idea or want to collaborate, feel free to
           reach out through the email below or connect via social media. Looking
           forward to connecting with you!
         </p>
@@ -184,10 +190,22 @@
         </div>
       </div>
     </section>
-    <footer class="bg-grey">
+    <footer class="bg-white">
       <p class="text-center">
-        Developed by Lungile Simelane using Bootstrap, code available on GitHub
-        and hosted on Netlify
+        Developed by Lungile Simelane using Bootstrap, code available on
+        <a
+          href="https://github.com/LungiMarcia/Portfolio"
+          target="_blank"
+          class="links"
+          >GitHub</a
+        >
+        and hosted on
+        <a
+          href="https://lungile-portfolio.netlify.app"
+          target="_blank"
+          class="links"
+          >Netlify</a
+        >
       </p>
     </footer>
   </body>
