--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Portfolio of Lungile Simelane, a front-end developer based in South Africa."
+    />
     <title>Front-end Developer | Lungile Simelane</title>
     <link rel="icon" type="image/png" href="images/favicon-32x32.png" />
     <link
@@ -39,13 +43,13 @@
     >
       <main class="text-center">
         <h1 class="display-1">I am Lungile Simelane.</h1>
-        <h3>Front-end Developer, based in South Afica.</h3>
+        <h3>Front-end Developer, based in South Africa.</h3>
         <a href="#about-me" class="btn btn-branding mt-5">Get to know me</a>
       </main>
     </div>
 
-    ///About-me section///
-    <section id="about-me" class="bg-dark">
+    <!-- About-me section -->
+    <section id="about-me" class="bg-dark py-5">
       <div class="container about">
         <div class="row">
           <div class="col-md-4">
@@ -64,7 +68,7 @@
                 based in Pretoria, South Africa. With a keen eye for design and
                 a strong foundation in coding, I specialize in creating visually
                 stunning and user-friendly web experiences. My expertise spans
-                HTML, CSS and JavaScript. I thrive on transforming complex
+                HTML, CSS, and JavaScript. I thrive on transforming complex
                 problems into intuitive and accessible solutions. Beyond coding,
                 I enjoy staying updated with the latest tech trends and
                 continuously honing my skills to deliver cutting-edge web
@@ -78,19 +82,23 @@
       </div>
     </section>
 
-    ///Projects section///
-    <section id="projects" class="gradient-background mt-4">
+    <!-- Projects section -->
+    <section id="projects" class="gradient-background py-5">
       <div class="container">
         <h1 class="text-center text-white">Projects</h1>
         <div class="row mt-5">
-          <div class="col-md-4">
-            <div class="card" style="width: 22rem">
-              <img src="images/landing.png" class="card-img-top" alt="..." />
+          <div class="col-md-4 mb-4">
+            <div class="card h-100">
+              <img
+                src="images/landing.png"
+                class="card-img-top"
+                alt="Landing Page Project"
+              />
               <div class="card-body">
                 <h5 class="card-title">Landing Page</h5>
                 <p class="card-text">
-                  This landing page project was built using the bare basics of
-                  HTML,CSS and Javascript.
+                  This landing page project was built using the basics of HTML,
+                  CSS, and JavaScript.
                 </p>
                 <a
                   href="https://coffee-landing-page.netlify.app"
@@ -107,18 +115,22 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
-            <div class="card" style="width: 22rem">
-              <img src="images/weather.png" class="card-img-top" alt="..." />
+          <div class="col-md-4 mb-4">
+            <div class="card h-100">
+              <img
+                src="images/weather.png"
+                class="card-img-top"
+                alt="Weather App Project"
+              />
               <div class="card-body">
                 <h5 class="card-title">Weather App</h5>
                 <p class="card-text">
-                  This Weather App project was built using HTML, CSS, Javascript
-                  and API intergration.
+                  This Weather App project was built using HTML, CSS,
+                  JavaScript, and API integration.
                 </p>
                 <a
                   href="https://weatherwebsite-project.netlify.app"
-                  tagert="_blank"
+                  target="_blank"
                   class="btn btn-primary"
                   >View Project</a
                 >
@@ -131,13 +143,17 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
-            <div class="card" style="width: 22rem">
-              <img src="images/portfolio.png" class="card-img-top" alt="..." />
+          <div class="col-md-4 mb-4">
+            <div class="card h-100">
+              <img
+                src="images/portfolio.png"
+                class="card-img-top"
+                alt="Portfolio Project"
+              />
               <div class="card-body">
                 <h5 class="card-title">Portfolio</h5>
                 <p class="card-text">
-                  This portfolio was built using HTML, CSS and bootstrap.
+                  This portfolio was built using HTML, CSS, and Bootstrap.
                 </p>
                 <a
                   href="https://lungile-portfolio.netlify.app"
@@ -155,43 +171,49 @@
             </div>
           </div>
         </div>
+        <h4 class="text-center text-white mt-5">
+          More projects coming soon...
+        </h4>
       </div>
-      <h4 class="text-center text-white mt-5">More projects coming soon...</h4>
     </section>
 
-    ///Contact section///
-    <section id="contact">
-      <div class="contact">
+    <!-- Contact section -->
+    <section id="contact" class="bg-dark py-5">
+      <div class="container">
         <h1 class="text-center text-white">Let's Connect</h1>
         <p class="text-center text-white">
           Whether you have a project idea or want to collaborate, feel free to
           reach out through the email below or connect via social media. Looking
           forward to connecting with you!
         </p>
-        <div class="social-links d-flex justify-content-center">
+        <div class="social-links d-flex justify-content-center mb-4">
           <a
             href="https://github.com/LungiMarcia"
             target="_blank"
             aria-label="GitHub"
-            ><i class="fa-brands fa-github"></i
-          ></a>
+            class="mx-2 text-white"
+          >
+            <i class="fa-brands fa-github"></i>
+          </a>
           <a
             href="https://linkedin.com/in/lungile-simelane-142972a5"
             target="_blank"
             aria-label="LinkedIn"
-            ><i class="fa-brands fa-linkedin"></i
-          ></a>
-        </div>
-        <div class="email-link text-center mt-4">
-          <a href="mailto:lungile.simelane4@gmail.com"
-            ><i class="fa-regular fa-envelope"></i
-            >lungile.simelane4@gmail.com</a
+            class="mx-2 text-white"
           >
+            <i class="fa-brands fa-linkedin"></i>
+          </a>
+        </div>
+        <div class="email-link text-center">
+          <a href="mailto:lungile.simelane4@gmail.com" class="text-white">
+            <i class="fa-regular fa-envelope"></i> lungile.simelane4@gmail.com
+          </a>
         </div>
       </div>
     </section>
-    <footer class="bg-white">
-      <p class="text-center">
+
+    <footer class="bg-light py-3">
+      <p class="text-center mb-0">
         Developed by Lungile Simelane using Bootstrap, code available on
         <a
           href="https://github.com/LungiMarcia/Portfolio"
@@ -205,7 +227,7 @@
           target="_blank"
           class="links"
           >Netlify</a
-        >
+        >.
       </p>
     </footer>
   </body>
