--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Portfolio of Lungile Simelane, a front-end developer based in South Africa."
+      content="Portfolio of Lungile Simelane, a passionate front-end developer based in Pretoria, South Africa."
     />
     <title>Front-end Developer | Lungile Simelane</title>
     <link rel="icon" type="image/png" href="images/favicon-32x32.png" />
