--- a/index.html
+++ b/index.html
@@ -31,12 +31,18 @@
       <div>
         <h3 class="float-md-start text-center">Portfolio</h3>
         <nav class="nav nav-masthead justify-content-center float-md-end">
-          <a class="nav-link active" aria-current="Homepage" href="#">Home</a>
+          <a
+            class="nav-link active"
+            aria-current="page"
+            href="#"
+            title="Homepage"
+            >Home</a
+          >
           <a class="nav-link" href="#about-me" title="About-page">About</a>
           <a class="nav-link" href="#projects" title="Projects-page"
             >Projects</a
           >
-          <a class="nav-link" href="#contact" title="contact-page">Contact</a>
+          <a class="nav-link" href="#contact" title="Contact-page">Contact</a>
         </nav>
       </div>
     </header>
@@ -61,7 +67,7 @@
               src="images/lungile.jpg"
               alt="Lungile Simelane Portrait"
               class="img-fluid"
-              title="developer-image"
+              title="Lungile's image"
               width="300"
             />
           </div>
