--- a/index.html
+++ b/index.html
@@ -198,21 +198,21 @@
     </section>
 
     <!-- Contact section -->
-    <section id="contact" class="bg-dark py-5">
+    <section id="contact" class="bg-dark">
       <div class="container">
         <h1 class="text-center text-white">Let's Connect</h1>
         <p class="text-center text-white" title="Contact content">
           Whether you have a project idea or want to collaborate, feel free to
-          reach out through the email below or connect via social media. Looking
-          forward to connecting with you!
+          reach out through the email below or connect via social media.
+          <br />
+          Looking forward to connecting with you!
         </p>
         <div class="social-links d-flex justify-content-center mb-4">
           <a
             href="https://github.com/LungiMarcia"
             target="_blank"
             aria-label="GitHub"
-            title="Lungile'GitHub profile"
-            class="mx-2 text-white"
+            title="Lungile's GitHub profile"
           >
             <i class="fa-brands fa-github"></i>
           </a>
@@ -221,25 +221,20 @@
             target="_blank"
             aria-label="LinkedIn"
             title="Lungile's LinkedIn profile"
-            class="mx-2 text-white"
           >
             <i class="fa-brands fa-linkedin"></i>
           </a>
         </div>
-        <div class="email-link text-center">
-          <a
-            href="mailto:lungile.simelane4@gmail.com"
-            title="Lungile's email"
-            class="text-white"
-          >
+        <div class="email-link text-center mb-5">
+          <a href="mailto:lungile.simelane4@gmail.com" title="Lungile's email">
             <i class="fa-regular fa-envelope"></i> lungile.simelane4@gmail.com
           </a>
         </div>
       </div>
     </section>
 
-    <footer class="bg-light py-3">
-      <p class="text-center mb-0">
+    <footer class="bg-light">
+      <p class="text-center">
         Developed by Lungile Simelane using Bootstrap, code available on
         <a
           href="https://github.com/LungiMarcia/Portfolio"
