--- a/index.html
+++ b/index.html
@@ -191,6 +191,41 @@
             </div>
           </div>
         </div>
+
+          <div class="col-md-4 mb-4">
+            <div class="card h-100">
+              <img
+                src="images/portfolio.png"
+                class="card-img-top"
+                alt="Portfolio Project"
+                title="Portfolio image"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Portfolio</h5>
+                <p class="card-text" title="portfolio description">
+                  This portfolio was built using HTML, CSS, and Bootstrap.
+                </p>
+                <a
+                  href="https://lungile-portfolio.netlify.app"
+                  target="_blank"
+                  class="btn btn-primary"
+                  title="Portfolio link"
+                  >View Project</a
+                >
+                <a
+                  href="https://github.com/LungiMarcia/Portfolio"
+                  target="_blank"
+                  class="btn btn-primary"
+                  title="Portfolio code"
+                  >View Code</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+
         <h4 class="text-center text-white mt-5">
           More projects coming soon...
         </h4>
