--- a/index.html
+++ b/index.html
@@ -192,6 +192,71 @@
           </div>
         </div>
 
+        <div class="container">
+        <h1 class="text-center text-white" title="Projects-page">Projects</h1>
+        <div class="row mt-5">
+          <div class="col-md-4 mb-4">
+            <div class="card h-100">
+              <img
+                src="images/landing.png"
+                class="card-img-top"
+                alt="Landing Page Project"
+                title="Landing pade project image"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Landing Page</h5>
+                <p class="card-text" title="Landing page description">
+                  This landing page project was built using the basics of HTML,
+                  CSS, and JavaScript.
+                </p>
+                <a
+                  href="https://coffee-landing-page.netlify.app"
+                  target="_blank"
+                  class="btn btn-primary"
+                  title="landing page project link"
+                  >View Project</a
+                >
+                <a
+                  href="https://github.com/LungiMarcia/Landing_page"
+                  target="_blank"
+                  class="btn btn-primary"
+                  title="landing page project code"
+                  >View Code</a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-4">
+            <div class="card h-100">
+              <img
+                src="images/weather.png"
+                class="card-img-top"
+                alt="Weather App Project"
+                title="weather app project image"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Weather App</h5>
+                <p class="card-text" title="weather app project description">
+                  This Weather App project was built using HTML, CSS,
+                  JavaScript, and API integration.
+                </p>
+                <a
+                  href="https://weatherwebsite-project.netlify.app"
+                  target="_blank"
+                  class="btn btn-primary"
+                  title="weather app project link"
+                  >View Project</a
+                >
+                <a
+                  href="https://github.com/LungiMarcia/Weather-App"
+                  target="_blank"
+                  class="btn btn-primary"
+                  title="weather app project code"
+                  >View Code</a
+                >
+              </div>
+            </div>
+          </div>
           <div class="col-md-4 mb-4">
             <div class="card h-100">
               <img
@@ -224,68 +289,7 @@
           </div>
         </div>
 
-          <div class="col-md-4 mb-4">
-            <div class="card h-100">
-              <img
-                src="images/portfolio.png"
-                class="card-img-top"
-                alt="Portfolio Project"
-                title="Portfolio image"
-              />
-              <div class="card-body">
-                <h5 class="card-title">Portfolio</h5>
-                <p class="card-text" title="portfolio description">
-                  This portfolio was built using HTML, CSS, and Bootstrap.
-                </p>
-                <a
-                  href="https://lungile-portfolio.netlify.app"
-                  target="_blank"
-                  class="btn btn-primary"
-                  title="Portfolio link"
-                  >View Project</a
-                >
-                <a
-                  href="https://github.com/LungiMarcia/Portfolio"
-                  target="_blank"
-                  class="btn btn-primary"
-                  title="Portfolio code"
-                  >View Code</a
-                >
-              </div>
-            </div>
-          </div>
-        </div>
-  <div class="col-md-4 mb-4">
-            <div class="card h-100">
-              <img
-                src="images/portfolio.png"
-                class="card-img-top"
-                alt="Portfolio Project"
-                title="Portfolio image"
-              />
-              <div class="card-body">
-                <h5 class="card-title">Portfolio</h5>
-                <p class="card-text" title="portfolio description">
-                  This portfolio was built using HTML, CSS, and Bootstrap.
-                </p>
-                <a
-                  href="https://lungile-portfolio.netlify.app"
-                  target="_blank"
-                  class="btn btn-primary"
-                  title="Portfolio link"
-                  >View Project</a
-                >
-                <a
-                  href="https://github.com/LungiMarcia/Portfolio"
-                  target="_blank"
-                  class="btn btn-primary"
-                  title="Portfolio code"
-                  >View Code</a
-                >
-              </div>
-            </div>
-          </div>
-        </div>
+          
 
 
 
