--- a/index.html
+++ b/index.html
@@ -197,13 +197,13 @@
           <div class="col-md-4 mb-4">
             <div class="card h-100">
               <img
-                src="images/landing.png"
+                src="images/calculator.png"
                 class="card-img-top"
                 alt="Landing Page Project"
                 title="Landing pade project image"
               />
               <div class="card-body">
-                <h5 class="card-title">Landing Page</h5>
+                <h5 class="card-title">Calculator</h5>
                 <p class="card-text" title="Landing page description">
                   This landing page project was built using the basics of HTML,
                   CSS, and JavaScript.
@@ -228,13 +228,13 @@
           <div class="col-md-4 mb-4">
             <div class="card h-100">
               <img
-                src="images/weather.png"
+                src="images/login-authentication.png"
                 class="card-img-top"
                 alt="Weather App Project"
                 title="weather app project image"
               />
               <div class="card-body">
-                <h5 class="card-title">Weather App</h5>
+                <h5 class="card-title">Login authentication</h5>
                 <p class="card-text" title="weather app project description">
                   This Weather App project was built using HTML, CSS,
                   JavaScript, and API integration.
@@ -259,13 +259,13 @@
           <div class="col-md-4 mb-4">
             <div class="card h-100">
               <img
-                src="images/portfolio.png"
+                src="images/To-Do App.png"
                 class="card-img-top"
                 alt="Portfolio Project"
                 title="Portfolio image"
               />
               <div class="card-body">
-                <h5 class="card-title">Portfolio</h5>
+                <h5 class="card-title">To-Do App</h5>
                 <p class="card-text" title="portfolio description">
                   This portfolio was built using HTML, CSS, and Bootstrap.
                 </p>
