--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 src="images/landing.png"
                 class="card-img-top"
                 alt="Landing Page Project"
-                title="Landing pade project image"
+                title="Landing page project image"
               />
               <div class="card-body">
                 <h5 class="card-title">Landing Page</h5>
@@ -199,24 +199,24 @@
               <img
                 src="images/calculator.png"
                 class="card-img-top"
-                alt="Landing Page Project"
-                title="Landing pade project image"
+                alt="calculator Project"
+                title="calculator project image"
               />
               <div class="card-body">
                 <h5 class="card-title">Calculator</h5>
-                <p class="card-text" title="Landing page description">
-                  This landing page project was built using the basics of HTML,
+                <p class="card-text" title="calculator description">
+                  This calculator was built using the HTML,
                   CSS, and JavaScript.
                 </p>
                 <a
                   href="https://coffee-landing-page.netlify.app"
                   target="_blank"
                   class="btn btn-primary"
-                  title="landing page project link"
+                  title="calculator project link"
                   >View Project</a
                 >
                 <a
-                  href="https://github.com/LungiMarcia/Landing_page"
+                  href="https://github.com/LungiMarcia/Calculator"
                   target="_blank"
                   class="btn btn-primary"
                   title="landing page project code"
