--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                   CSS, and JavaScript.
                 </p>
                 <a
-                  href="https://coffee-landing-page.netlify.app"
+                  href="https://developed-calculator.netlify.app"
                   target="_blank"
                   class="btn btn-primary"
                   title="calculator project link"
@@ -219,7 +219,7 @@
                   href="https://github.com/LungiMarcia/Calculator"
                   target="_blank"
                   class="btn btn-primary"
-                  title="landing page project code"
+                  title="calculator project code"
                   >View Code</a
                 >
               </div>
@@ -230,27 +230,26 @@
               <img
                 src="images/login-authentication.png"
                 class="card-img-top"
-                alt="Weather App Project"
-                title="weather app project image"
+                alt="login-authentication Project"
+                title="login-authentication project image"
               />
               <div class="card-body">
                 <h5 class="card-title">Login authentication</h5>
-                <p class="card-text" title="weather app project description">
-                  This Weather App project was built using HTML, CSS,
-                  JavaScript, and API integration.
+                <p class="card-text" title="login-authentication project description">
+                  This is a login authentication system created using HTML, CSS, and JavaScript. It allows users to register, login, and access a secure page.
                 </p>
                 <a
                   href="https://weatherwebsite-project.netlify.app"
                   target="_blank"
                   class="btn btn-primary"
-                  title="weather app project link"
+                  title="login authentication link"
                   >View Project</a
                 >
                 <a
-                  href="https://github.com/LungiMarcia/Weather-App"
+                  href="https://github.com/LungiMarcia/Login-authentication"
                   target="_blank"
                   class="btn btn-primary"
-                  title="weather app project code"
+                  title="login-authentication project code"
                   >View Code</a
                 >
               </div>
@@ -261,26 +260,26 @@
               <img
                 src="images/To-Do App.png"
                 class="card-img-top"
-                alt="Portfolio Project"
-                title="Portfolio image"
+                alt="To-Do App Project"
+                title="To-Do App image"
               />
               <div class="card-body">
                 <h5 class="card-title">To-Do App</h5>
-                <p class="card-text" title="portfolio description">
-                  This portfolio was built using HTML, CSS, and Bootstrap.
+                <p class="card-text" title="To-Do App description">
+                  This To-Do App was built using HTML, CSS, and JavaScript.
                 </p>
                 <a
-                  href="https://lungile-portfolio.netlify.app"
+                  href="https://to-do-websiteapp.netlify.app/"
                   target="_blank"
                   class="btn btn-primary"
-                  title="Portfolio link"
+                  title="To-Do App link"
                   >View Project</a
                 >
                 <a
-                  href="https://github.com/LungiMarcia/Portfolio"
+                  href="https://github.com/LungiMarcia/To-do-Web-App"
                   target="_blank"
                   class="btn btn-primary"
-                  title="Portfolio code"
+                  title="To-Do App code"
                   >View Code</a
                 >
               </div>
