--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                   This is a login authentication system created using HTML, CSS, and JavaScript. It allows users to register, login, and access a secure page.
                 </p>
                 <a
-                  href="https://weatherwebsite-project.netlify.app"
+                  href="https://login-authentication-page.netlify.app/"
                   target="_blank"
                   class="btn btn-primary"
                   title="login authentication link"
