--- a/index.html
+++ b/index.html
@@ -303,6 +303,74 @@
           <br />
           Looking forward to connecting with you!
         </p>
+<form action="https://formspree.io/f/mzbnyago" method="POST"></form>
+        <div class="input-box">
+          <div class="input-field">
+            <input
+              type="text"
+              id="name"
+              name="name"
+              placeholder="Name"
+              class="item"
+              autocomplete="off"
+              required
+            />
+          </div>
+          <div class="input-field">
+            <input
+              type="text"
+              id="surname"
+              name="surname"
+              placeholder="Surname"
+              class="item"
+              autocomplete="off"
+              required
+            />
+          </div>
+        </div>
+        <div class="input-box">
+          <div class="input-field">
+            <input
+              tpye="text"
+              id="phone"
+              name="phone"
+              placeholder="Contact Number"
+              class="item"
+              autocomplete="off"
+              required
+            />
+          </div>
+          <div class="input-field">
+            <input
+              tpye="text"
+              id="email"
+              name="email"
+              placeholder="Email Address"
+              class="item"
+              autocomplete="off"
+              required
+            />
+          </div>
+        </div>
+        <div class="textarea">
+          <textarea
+            name="message"
+            id="message"
+            cols="30"
+            rows="10"
+            placeholder="Your message"
+            class="item"
+            autocomplete="off"
+            required
+          ></textarea>
+        </div>
+        <button type="submit">Submit</button>
+      </form>
+    </section>
+    <script src="./index.js"></script>
+
+
+
         <div class="social-links d-flex justify-content-center mb-4">
           <a
             href="https://github.com/LungiMarcia"
@@ -321,11 +389,7 @@
             <i class="fa-brands fa-linkedin"></i>
           </a>
         </div>
-        <div class="email-link text-center mb-5">
-          <a href="mailto:lungile.simelane4@gmail.com" title="Lungile's email">
-            <i class="fa-regular fa-envelope"></i> lungile.simelane4@gmail.com
-          </a>
-        </div>
+  
       </div>
     </section>
 
