--- a/index.html
+++ b/index.html
@@ -303,6 +303,7 @@
           <br />
           Looking forward to connecting with you!
         </p>
+        <div class="contact-form">
 <form action="https://formspree.io/f/mzbnyago" method="POST"></form>
         <div class="input-box">
           <div class="input-field">
@@ -366,7 +367,7 @@
         </div>
         <button type="submit">Submit</button>
       </form>
-    </section>
+        </div>
     <script src="./index.js"></script>
 
 
