updated index.html and style.css

--- a/index.html
+++ b/index.html
@@ -303,7 +303,6 @@
           <br />
           Looking forward to connecting with you!
         </p>
-        <div class="contact-form">
 <form action="https://formspree.io/f/mzbnyago" method="POST"></form>
         <div class="input-box">
           <div class="input-field">
@@ -365,9 +364,8 @@
             required
           ></textarea>
         </div>
-        <button type="submit">Submit</button>
+        <button type="submit" class="submit-button">Submit</button>
       </form>
-        </div>
     <script src="./index.js"></script>
 
 
