updated index.html and style.css

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
           <br />
           Looking forward to connecting with you!
         </p>
-<form action="https://formspree.io/f/mzbnyago" method="POST"></form>
+<form action="https://formspree.io/f/mzbnyago" method="POST">
         <div class="input-box">
           <div class="input-field">
             <input
@@ -364,7 +364,7 @@
             required
           ></textarea>
         </div>
-        <button type="submit" class="submit-button">Submit</button>
+        <button type="submit">Submit</button>
       </form>
     <script src="./index.js"></script>
 
